# cmake_study

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  math.h
src/math0/: CMakeLists.txt  math0.cpp  math0.h
src/math1/: CMakeLists.txt  math1.cpp  math1.h
src/mathpro/: CMakeLists.txt  mathpro.cpp  mathpro.h
test/: CMakeLists.txt
